vendor/proc-macro-error-1.0.4/tests/ui/abort.stderr
error: abort!(span, from) test
 --> $DIR/abort.rs:4:13
  |
4 | abort_from!(one, two);
  |             ^^^

error: abort!(span, single_expr) test
 --> $DIR/abort.rs:5:18
  |
5 | abort_to_string!(one, two);
  |                  ^^^

error: abort!(span, expr1, expr2) test
 --> $DIR/abort.rs:6:15
  |
6 | abort_format!(one, two);
  |               ^^^

error: Diagnostic::abort() test
 --> $DIR/abort.rs:7:15
  |
7 | direct_abort!(one, two);
  |               ^^^

error: This is an error

  = note: simple note
  = help: simple help
  = help: simple hint
  = note: simple yay
  = note: format note
  = note: Some note
  = note: spanned simple note
  = note: spanned format note
  = note: Some note

 --> $DIR/abort.rs:8:14
  |
8 | abort_notes!(one, two);
  |              ^^^

error: abort_call_site! test
 --> $DIR/abort.rs:9:1
  |
9 | abort_call_site_test!(one, two);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
